--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@hotwired/stimulus": "^3.2.2",
     "@hotwired/turbo-rails": "^8.0.18",
     "@tailwindcss/cli": "^4.1.14",
+    "flowbite": "^3.1.2",
     "tailwindcss": "^4.1.14"
   }
 }
