--- a/lefthook.yml
+++ b/lefthook.yml
@@ -9,3 +9,6 @@ pre-commit:
     - name: rubocop
       glob: "*.rb"
       run: bundle exec rubocop --force-exclusion {all_files}
+    - name: erbl_lint
+      glob: "*.erb"
+      run: bundle exec erb_lint --lint-all
